BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Plant_Code_Details_HCPTS__c.object
<CustomObject>
    <description>Plant Code Details for EM</description>
    <fields>
        <fullName>Active_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_HCPTS__c</fullName>
        <description>Address Line 1</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_HCPTS__c</fullName>
        <description>Address Line 2</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_HCPTS__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_HCPTS__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_HCPTS__c</fullName>
        <description>End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_HCPTS__c</fullName>
        <description>External ID for Plan Code</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Formatted_Address_HCPTS__c</fullName>
        <formula>Address_Line_1_HCPTS__c   &amp; &apos;, &apos; &amp; City_HCPTS__c &amp; &apos;, &apos; &amp;  State_HCPTS__c &amp; &apos;, &apos; &amp;  Country_HCPTS__c</formula>
        <label>Formatted Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Company_HCPTS__c</fullName>
        <description>Name of Company</description>
        <label>Name of Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Code_Name_HCPTS__c</fullName>
        <label>Plant Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_HCPTS__c</fullName>
        <description>Postal Code</description>
        <label>Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_HCPTS__c</fullName>
        <description>Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_HCPTS__c</fullName>
        <description>State</description>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Plant Code Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address_Line_1_HCPTS__c</columns>
        <columns>City_HCPTS__c</columns>
        <columns>Country_HCPTS__c</columns>
        <columns>Plant_Code_Name_HCPTS__c</columns>
        <columns>State_HCPTS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Plant Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Code Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>